--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+### Version 2.2:
+- Remove usage of session for payment.
+- Store payment info in file.
+
 ### Version 2.1:
 - Fix a bug in returning from the gateway.
 
